# supply-chain-agent-orchestrator

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPARISON.md  STACK.md  TECHNICAL_DOCUMENTATION.md
docs/adr/: 0001-record-architecture-decisions.md  0002-orchestration-framework.md
src/supplyagents/: __init__.py  config.py  feeds.py  graph.py  guardrails.py  mcp_server.py  nodes.py  observability.py  providers.py  simulate.py  state.py
src/supplyagents/compare/: __init__.py  benchmark.py  crew.py
tests/: conftest.py  test_config.py  test_crew.py  test_graph.py  test_guardrails.py  test_mcp.py  test_observability.py
