[project]
name = "supplyagents"
version = "0.5.2"
description = "A multi-agent logistics orchestrator (LangGraph, with a CrewAI comparison) for supply-chain disruption response."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Vijay Ananth Karunanithi" }]
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "mcp>=1.9",
    "langfuse>=3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "pre-commit>=4.0",
]
# CrewAI is only needed for the framework-comparison phase (ADR-0002).
# Kept out of the base install so the production path stays lean.
compare = [
    "crewai>=0.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supplyagents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
